[package]
name = "async-notify"
version = "0.1.2"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Sherlock-Holo/async-notify"
description = "An `async-std` version Notify, like `tokio` Notify but implement Clone."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = ["unstable"] }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
async-std = { version = "1.5", features = ["unstable", "attributes"] }
futures-util = "0.3"