[package]
name = "async-notify"
version = "0.2.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Sherlock-Holo/async-notify"
description = "A general version async Notify, like `tokio` Notify but can work with any async runtime."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
futures-channel = "0.3"

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
