[package]
name = "async-notify"
version = "0.3.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Sherlock-Holo/async-notify"
description = "A general version async Notify, like `tokio` Notify but can work with any async runtime."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "4"
futures-core = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
async-global-executor = { version = "2", default-features = false }
futures-util = "0.3"
